Bug 254449 - missing way to handle locally installed packages
Summary: missing way to handle locally installed packages
Status: RESOLVED FIXED
Alias: None
Product: muon
Classification: Applications
Component: muon (show other bugs)
Version: 1.0.2
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Jonathan Thomas
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-10-17 12:50 UTC by m.wege
Modified: 2010-10-17 15:31 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed In: 1.0.3


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description m.wege 2010-10-17 12:50:31 UTC
Version:           1.0.2 (using KDE 4.5.2) 
OS:                Linux

Muon seems to be missing a way to handle locally installed packages or packages which can not be downloaded anymore. When I mark such a package for reinstall, it do not reveive an error message. This only happens when I apply the changes, but the message "Packages can not be downloaded" does not give the necessary information (like why and specifying which of the marked packages can not be downloaded) and it also leads in cancelling all other operations. Also the details about the package do not reveal that the packages can not be downloaded from anywhere.

Reproducible: Always




OS: Linux (i686) release 2.6.35-22-generic-pae
Compiler: cc
Comment 1 Jonathan Thomas 2010-10-17 15:28:04 UTC
SVN commit 1186760 by jmthomas:

Disable the reinstallation button for locally-installed or outdated packages. (Since outdated packages are technically downloadable, just not at the current version)

FIXED-IN:1.1.0
BUG:254449


 M  +4 -0      MainTab.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1186760
Comment 2 Jonathan Thomas 2010-10-17 15:31:24 UTC
SVN commit 1186765 by jmthomas:

Backport r1186760 to the 1.0.x branch.

FIXED-IN:1.0.3
BUG:254449


 M  +4 -0      MainTab.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1186765