Disable the reinstallation button for locally-installed or outdated packages. (Since outdated packages are technically downloadable, just not at the current version)

FIXED-IN:1.1.0
BUG:254449

svn path=/trunk/extragear/sysadmin/muon/; revision=1186760